# SC2RepAnalysis

./: .env  .gitignore  Analysis.py  BuildInformation.py  LICENSE  README.md  Trans.py  WhetherFull.py  head.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  putin.py  pyproject.toml  run.py
data/: build.toml  change.toml
front/: index.html  package-lock.json  package.json  pnpm-lock.yaml
front/public/articles/: updatehistory.md
front/src/: main.ts
front/src-tauri/: 2  Cargo.toml  tauri.conf.json
front/src-tauri/capabilities/: default.json
front/src-tauri/src/: lib.rs  main.rs
front/src/components/: Dashboard.vue  Sidebar.vue  Topbar.vue
front/src/components/Batch/: BatchA.vue
front/src/components/Home/: About.vue  Guide.vue  Homepage.vue  UpdateHistory.vue
front/src/components/Mydata/: Mydata.vue
front/src/components/Practice/: Practice.vue
front/src/components/Reminder/: FloatingBanner.vue  ReminderS.vue
front/src/components/Settings/: Settings.vue
front/src/components/Single/: BuildBox.vue  SingleA.vue
front/src/components/widget/: Data_card.vue  MessageBox.vue  TestTemp.vue  blueButton.vue  card.vue  searchBox.vue
front/src/pages/: LogViewer.vue
front/src/router/: index.ts
front/src/styles/: global.css
src/app/: __main__.py  config.py  constants.py  libs.py  libsK.py  log.py  main.py
src/app/ProcessTrain/: Trans.py
src/app/analysis/: Analysis.py  core.py  file_io.py  putin.py
