[package]
name = "sc2rep-shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "^2", features = [] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2" 
serde_with = { version = "3", features = ["chrono_0_4"] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "^2", features = [] }
